modified template file

--- a/templates/out.html
+++ b/templates/out.html
@@ -13,7 +13,7 @@
     <link rel="dns-prefetch" href="http://img02.sogoucdn.com/">
     <link rel="dns-prefetch" href="http://img03.sogoucdn.com/">
     <link rel="dns-prefetch" href="http://img04.sogoucdn.com/">
-    <link rel="shortcut icon" href="http://www.sogou.com/images/logo/new/favicon.ico?nv=1&v=2" type="image/x-icon">
+    <link rel="shortcut icon" href="http://www.sogou.c../../../../static/images/logo/new/favicon.ico?nv=1&v=2" type="image/x-icon">
     <title>搜狗搜索</title>
 
 
@@ -102,7 +102,7 @@
         }
 
         .topbar dd {
-            background: url(../images/common/topBarBg.gif) no-repeat;
+            background: url(../../../../static/images/common/topBarBg.gif) no-repeat;
             padding-left: 1px;
             position: relative
         }
@@ -112,7 +112,7 @@
         }
 
         .topbar .sogouIco, .topbar .baiduIco, .topbar .googleIco {
-            background: url(../images/common/minlogo.gif) no-repeat;
+            background: url(../../../../static/images/common/minlogo.gif) no-repeat;
             color: #666;
             float: left;
             height: 25px;
@@ -144,7 +144,7 @@
             position: absolute;
             top: 53px;
             right: 7px;
-            background: url(../images/sohu.gif) no-repeat
+            background: url(../../../../static/images/sohu.gif) no-repeat
         }
 
         .header {
@@ -193,7 +193,7 @@
             width: 13px;
             height: 16px;
             overflow: hidden;
-            background: url(../images/nav-new.gif) 0 0 no-repeat;
+            background: url(../../../../static/images/nav-new.gif) 0 0 no-repeat;
             top: -15px;
             *top: -16px;
             right: -2px;
@@ -237,7 +237,7 @@
             padding-right: 9px;
             *padding-right: 8px;
             display: inline-block;
-            background: url(../images/arr.gif) no-repeat 100% 5px;
+            background: url(../../../../static/images/arr.gif) no-repeat 100% 5px;
             background-position: 100% 3 px\9
         }
 
@@ -355,7 +355,7 @@
         .qreset2 {
             width: 16px;
             height: 16px;
-            background: #fff url(../images/common/vrSkin.gif) no-repeat -109px 0;
+            background: #fff url(../../../../static/images/common/vrSkin.gif) no-repeat -109px 0;
             position: absolute;
             cursor: pointer;
             right: 8px;
@@ -370,7 +370,7 @@
             float: left;
             width: 100px;
             height: 34px;
-            background: url(../images/common/vrSkin01.gif) no-repeat;
+            background: url(../../../../static/images/common/vrSkin01.gif) no-repeat;
             border: 0;
             margin: 0 25px 0 0;
             padding: 0;
@@ -402,7 +402,7 @@
             line-height: 33px;
             cursor: pointer;
             padding-right: 12px;
-            background: url(../images/common/arr.gif) no-repeat 100% -43px;
+            background: url(../../../../static/images/common/arr.gif) no-repeat 100% -43px;
             color: #666
         }
 
@@ -582,7 +582,7 @@
 
         .tel {
             padding-left: 20px;
-            background: url(../images/common/skinY.gif) no-repeat;
+            background: url(../../../../static/images/common/skinY.gif) no-repeat;
             margin-left: 3px
         }
 
@@ -723,7 +723,7 @@
             *line-height: 17px;
             overflow: hidden;
             text-decoration: none;
-            background: url(../images/laud-ico.gif) 3px 3px no-repeat;
+            background: url(../../../../static/images/laud-ico.gif) 3px 3px no-repeat;
             color: #999;
             border: 1px solid #fff;
             border-radius: 2px
@@ -735,7 +735,7 @@
         }
 
         .fb .laud-ico .on-laud {
-            background: url(../images/laud-ico.gif) 3px -56px no-repeat
+            background: url(../../../../static/images/laud-ico.gif) 3px -56px no-repeat
         }
 
         .fb .laud-ico .on-laud:hover {
@@ -786,7 +786,7 @@
             position: absolute;
             bottom: 0;
             left: -1px;
-            background: url(../images/common/rt_line.gif) no-repeat;
+            background: url(../../../../static/images/common/rt_line.gif) no-repeat;
             overflow: hidden
         }
 
@@ -996,7 +996,7 @@
             top: 1px;
             right: 1px;
             z-index: 2;
-            background: url(../images/common/vrSkin.gif) no-repeat -110px -62px
+            background: url(../../../../static/images/common/vrSkin.gif) no-repeat -110px -62px
         }
 
         .pvboxArr {
@@ -1006,7 +1006,7 @@
             position: absolute;
             top: 48px;
             left: -11px;
-            background: url(../images/common/vrSkin.gif) no-repeat -135px 0
+            background: url(../../../../static/images/common/vrSkin.gif) no-repeat -135px 0
         }
 
         .pvTitle {
@@ -1061,7 +1061,7 @@
         }
 
         .res-logn-ico {
-            background: url(../images/skin/skin.gif) 15px -395px no-repeat;
+            background: url(../../../../static/images/skin/skin.gif) 15px -395px no-repeat;
             color: #00c;
             height: 25px;
             line-height: 25px;
@@ -1077,8 +1077,8 @@
         .res-login {
             margin-right: 7px;
             text-decoration: none;
-            background: url(../images/skin/skin.gif) right -358px no-repeat;
-            *background: url(../images/skin/skin.gif) right -358px no-repeat;
+            background: url(../../../../static/images/skin/skin.gif) right -358px no-repeat;
+            *background: url(../../../../static/images/skin/skin.gif) right -358px no-repeat;
             color: #00c;
             height: 25px;
             line-height: 25px;
@@ -1148,7 +1148,7 @@
         }
 
         .illegal {
-            background: url(../images/icon!.gif) no-repeat;
+            background: url(../../../../static/images/icon!.gif) no-repeat;
             line-height: 1.5;
             margin: 0 0 20px 0;
             padding-left: 28px;
@@ -1213,7 +1213,7 @@
         .icon_noRes {
             line-height: 22px;
             padding-left: 28px;
-            background: url(../images/tips.gif) no-repeat;
+            background: url(../../../../static/images/tips.gif) no-repeat;
             margin-bottom: 36px
         }
 
@@ -1247,7 +1247,7 @@
 
         .icon_find {
             padding-left: 21px;
-            background: url(../images/ico_zhanzhang_srch.gif) no-repeat 0 2px;
+            background: url(../../../../static/images/ico_zhanzhang_srch.gif) no-repeat 0 2px;
             height: 22px
         }
 
@@ -1383,7 +1383,7 @@
             width: 40px;
             height: 40px;
             overflow: hidden;
-            background: url(../images/strPlay.png) no-repeat;
+            background: url(../../../../static/images/strPlay.png) no-repeat;
             _background: 0;
             _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src=images/strPlay.png, sizingMethod=crop);
             position: absolute;
@@ -1394,7 +1394,7 @@
         }
 
         .tv_120_90:hover .tv_play {
-            background: url(../images/strPlay-hover.png) no-repeat;
+            background: url(../../../../static/images/strPlay-hover.png) no-repeat;
             _background: 0;
             _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src=images/strPlay-hover.png, sizingMethod=crop)
         }
@@ -1426,7 +1426,7 @@
         }
 
         .qaList dt, .qaList dd {
-            background: url(../images/qa_ico.gif) no-repeat 0 5px
+            background: url(../../../../static/images/qa_ico.gif) no-repeat 0 5px
         }
 
         .qaList dt {
@@ -1754,7 +1754,7 @@
             width: 90px;
             height: 15px;
             overflow: hidden;
-            background: url(../images/str-star.gif) repeat-x;
+            background: url(../../../../static/images/str-star.gif) repeat-x;
             display: inline-block;
             margin-right: 8px;
             position: relative;
@@ -1766,7 +1766,7 @@
         .str-star span {
             height: 15px;
             display: block;
-            background: url(../images/str-star.gif) repeat-x left -22px
+            background: url(../../../../static/images/str-star.gif) repeat-x left -22px
         }
 
         .rating-bar .str-star {
@@ -1832,7 +1832,7 @@
         .str-tag {
             position: absolute;
             display: block;
-            background: url(../images/tag-skin.png) no-repeat;
+            background: url(../../../../static/images/tag-skin.png) no-repeat;
             height: 20px;
             line-height: 20px;
             padding: 0 6px;
@@ -1897,7 +1897,7 @@
             bottom: 0;
             left: 0;
             width: 100%;
-            background: url(../images/tag-skin.png) no-repeat;
+            background: url(../../../../static/images/tag-skin.png) no-repeat;
             cursor: pointer;
             _background: 0;
             _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(src=images/tag-skin.png, sizingMethod=crop);
@@ -1948,7 +1948,7 @@
 
         .rise-in-price, .cut-price, .flat-ico {
             padding-right: 16px;
-            background: url(../images/price-skin.gif) right 3px no-repeat
+            background: url(../../../../static/images/price-skin.gif) right 3px no-repeat
         }
 
         .cut-price {
@@ -2342,12 +2342,12 @@
             height: 14px;
             overflow: hidden;
             float: left;
-            background: url(../images/exp-skin.gif) 0 0 no-repeat;
+            background: url(../../../../static/images/exp-skin.gif) 0 0 no-repeat;
             margin-right: 5px
         }
 
         .gold-medal {
-            background: url(../images/exp-skin.gif) 0 -34px no-repeat
+            background: url(../../../../static/images/exp-skin.gif) 0 -34px no-repeat
         }
 
         .str-box-v4 {
@@ -2655,7 +2655,7 @@
 
         .tabTitle {
             height: 32px;
-            background: #f5f5f5 url(../images/skin_x.gif) repeat-x 0 -11px;
+            background: #f5f5f5 url(../../../../static/images/skin_x.gif) repeat-x 0 -11px;
             font-size: 0;
             letter-spacing: -5px;
             margin-top: 5px
@@ -2744,9 +2744,9 @@
             text-decoration: none;
             display: inline-block;
             padding-right: 12px;
-            background: url(../images/arrow.gif) no-repeat 100% 7px;
-            background: url(../images/arrow.gif) no-repeat 100% 5 px\9;
-            *background: url(../images/arrow.gif) no-repeat 100% 7px;
+            background: url(../../../../static/images/arrow.gif) no-repeat 100% 7px;
+            background: url(../../../../static/images/arrow.gif) no-repeat 100% 5 px\9;
+            *background: url(../../../../static/images/arrow.gif) no-repeat 100% 7px;
             color: #77c;
             font-size: 13px;
             letter-spacing: normal
@@ -2795,7 +2795,7 @@
             font-family: Arial, SimSun;
             display: inline-block;
             padding: 0 12px 0 0;
-            background: url(../images/arrow.gif) no-repeat right 13px
+            background: url(../../../../static/images/arrow.gif) no-repeat right 13px
         }
 
         .view-more a:hover {
@@ -3040,7 +3040,7 @@
         .selBox span, .selBox-ht28 span {
             display: block;
             padding: 1px 21px 1px 5px;
-            background: url(../images/vr/select.gif) no-repeat 100% 0;
+            background: url(../../../../static/images/vr/select.gif) no-repeat 100% 0;
             cursor: pointer;
             overflow: hidden;
             color: #666
@@ -3167,7 +3167,7 @@
         }
 
         .show, .hide {
-            background: url(../images/arr.gif) no-repeat
+            background: url(../../../../static/images/arr.gif) no-repeat
         }
 
         .show, .hide {
@@ -3268,7 +3268,7 @@
             text-decoration: none;
             color: #77c;
             padding-right: 12px;
-            background: url(../images/arr.gif) right 6px no-repeat
+            background: url(../../../../static/images/arr.gif) right 6px no-repeat
         }
 
         .vr-hide a span {
@@ -3293,7 +3293,7 @@
 
         .tab-vr-tit {
             height: 32px;
-            background: #f5f5f5 url(../images/skin_x.gif) repeat-x 0 -11px;
+            background: #f5f5f5 url(../../../../static/images/skin_x.gif) repeat-x 0 -11px;
             margin-top: 5px;
             zoom: 1
         }
@@ -3423,7 +3423,7 @@
         .r-sech span {
             padding-left: 18px;
             display: inline-block;
-            background: url(../images/ico_fdj.gif) 1px 5px no-repeat;
+            background: url(../../../../static/images/ico_fdj.gif) 1px 5px no-repeat;
             color: #666
         }
 
@@ -3532,7 +3532,7 @@
         .r-sech span {
             padding-left: 18px;
             display: inline-block;
-            background: url(../images/ico_fdj.gif) 1px 5px no-repeat;
+            background: url(../../../../static/images/ico_fdj.gif) 1px 5px no-repeat;
             color: #666
         }
 
@@ -3578,7 +3578,7 @@
             border: solid #8fd68f;
             border-width: 1px 1px 0;
             border-bottom: 1px solid #fff;
-            background: url(../images/safety/bg_official.gif) 0 0 repeat-x;
+            background: url(../../../../static/images/safety/bg_official.gif) 0 0 repeat-x;
             *background-position: 0 1px
         }
 
@@ -3907,7 +3907,7 @@
     </style>
 
 
-    <link rel="stylesheet" type="text/css" href="./out/m3.v.20.css">
+    <link rel="stylesheet" type="text/css" href="../../../../static/m3.v.20.css">
 </head>
 <body class=" vr1024">
 
@@ -3917,7 +3917,7 @@
 <dl class="topbar">
     <dd class="no-bg"><a href="javascript:void(0)" class="res-logn-ico" id="loginBtn">登录</a></dd>
 </dl>
-<div class="header"><a title="回到搜狗首页" href="http://www.sogou.com/" class="logo"><img src="./out/sousuo02.png"
+<div class="header"><a title="回到搜狗首页" href="http://www.sogou.com/" class="logo"><img src="../../../../static/sousuo02.png"
                                                                                      width="123" height="32" alt=""></a>
     <ul class="searchnav">
         <li>
@@ -4028,13 +4028,13 @@
     .curcate {
         line-height: 18px;
         display: inline-block;
-        background: #99C47A url(../images/curcate.gif) no-repeat;
+        background: #99C47A url(../../../../static/images/curcate.gif) no-repeat;
         color: #fff;
         font-weight: normal;
     }
 
     .curcate span {
-        background: url(../images/curcate.gif) no-repeat right -32px;
+        background: url(../../../../static/images/curcate.gif) no-repeat right -32px;
         display: inline-block;
         padding: 0 4px;
     }
@@ -4062,8 +4062,10 @@
 
 
 
-<div class="p" id="pagebar_container"><span>1</span> <a id="sogou_page_2"
-                                                        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=2&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">2</a><a
+<div class="p" id="pagebar_container"><span>1</span>
+    <a id="sogou_page_2"
+                                                        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=2&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">2</a>
+    <a
         id="sogou_page_3"
         href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=3&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">3</a><a
         id="sogou_page_4"
@@ -4114,7 +4116,7 @@
 
 
 <div class="cr" id="s_footer">
-    <!--[if IE]><a id="sogou_hpfooter" href="#pageEnd" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('http://www.sogou.com');">设为首页</a> | 
+    <!--[if IE]><a id="sogou_hpfooter" href="#pageEnd" onclick="this.style.behavior='url(#default#homepage)';this.setHomePage('http://www.sogou.com');">设为首页</a> |
     <![endif]--><a target="_blank" id="sogou_webhelp" href="http://help.sogou.com/?v=1">搜索帮助</a><a id="sogou_feedback"
                                                                                                    href="javascript:dissatisfied('fankuiform', false)">对结果不满意？</a><a
         target="_blank" id="sogou_jubao" href="http://www.sogou.com/complain/complaint.php?v=1&type=2">举报</a><a
@@ -4123,7 +4125,7 @@
 </div>
 
 
-<img style="position:absolute;top:-1px" src="./out/fav.ico" height="0" border="0" width="0">
+<img style="position:absolute;top:-1px" src="../../../../static/fav.ico" height="0" border="0" width="0">
 
 
 <form id="tupufankuiform" method="post" accept-charset="utf-8"><input type="hidden" name="cause" value=""><input
@@ -4134,7 +4136,7 @@
         type="hidden" name="queryurl" value=""><input type="hidden" name="content" value=""></form>
 
 
-<img src="./out/pv.gif" width="1" height="1" style="position:absolute;top:-1px">
+<img src="../../../../static/pv.gif" width="1" height="1" style="position:absolute;top:-1px">
 
 
 <!--[if IE 6]><style type="text/css">.topbar, .res-logn-ico {display:none}</style><![endif]-->
