--- a/templates/login.html
+++ b/templates/login.html
@@ -3,9 +3,11 @@
 
 
 <head>
-    <title>简单登陆页面</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <title>THUIR Experiment System</title>
     <script>
-        function r() {
+        function redirect() {
+            alert("My First JavaScript");
             var username = document.getElementById("username");
             var pass = document.getElementById("password");
             if (username.value == "") {
@@ -17,15 +19,13 @@
                 alert("请输入密码");
                 return;
             }
-            else if ((pass.value == "123456") && (username.value == "W")) {
-            <
-                Meta
-                http - equiv = "refresh"
-                content = "1;url=0.htm" >;
+            else if ((pass.value == "123456") && (isNaN(username.value))) {
+                window.location.href='/search/2/2/2'
                 return;
             }
             else {
                 alert("登录失败，请检查用户名和密码是否有误！");
+                alert(username.value);
                 return;
             }
             return true;
@@ -45,7 +45,7 @@
         </tr>
 
         <tr align=center>
-            <td colspan="2"><input type="button" value="登 录" onclick="r();"/>
+            <td colspan="2"><input type="button" value="登 录" onclick="redirect()"/>
                 <input type="reset" value="重 置"/></td>
         </tr>
 
