--- a/templates/out.html
+++ b/templates/out.html
@@ -14,10 +14,16 @@
     <link rel="dns-prefetch" href="http://img03.sogoucdn.com/">
     <link rel="dns-prefetch" href="http://img04.sogoucdn.com/">
     <link rel="shortcut icon" href="http://www.sogou.c../../../../static/images/logo/new/favicon.ico?nv=1&v=2" type="image/x-icon">
+    <!-- global variables: current task id, current query -->
+    <script type="text/javascript">
+        currentTaskID = "{{ taskid }}";
+        currentQuery = "{{ query }}";
+        console.log(currentQuery);
+        console.log(currentTaskID);
+    </script>
    	<script type="text/javascript" src="/static/conf/jquery-1.9.1.min.js"></script>
 	<script type="text/javascript" src="/static/conf/jquery-min.js"></script>
 	<script type="text/javascript" src="/static/conf/wc_preprocess.js"></script>
-	<script type="text/javascript" src="/static/conf/wc_log.js"></script>
 	<script type="text/javascript" src="/static/conf/jquery.bgpos.js"></script>
 	<script type="text/javascript" src="/static/conf/jquery.reveal.js"></script>
 	<script type="text/javascript" src="/static/conf/jquery.raty.js"></script>
@@ -3928,30 +3934,31 @@
 </dl>
 <div class="header"><a title="回到搜狗首页" href="http://www.sogou.com/" class="logo"><img src="../../../../static/sousuo02.png"
                                                                                      width="123" height="32" alt=""></a>
+
     <ul class="searchnav">
         <li>
-            <a href="http://news.sogou.com/news?ie=utf8&p=40230447&interV=kKIOkrELjbkNmLkElbYTkKIKmbELjboJmLkEkL8TkKIMkLELjb8TkKIKmrELjbkImLkElbs=_2064201500&query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC"
-               id="sogou_news" onclick="navBar(this,&#39;query=&#39;,true);">新闻</a></li>
+            <a href="http://news.sogou.com/news?ie=utf8&p=40230447&interV=kKIOkrELjbkNmLkElbYTkKIKmbELjboJmLkEkL8TkKIMkLELjb8TkKIKmrELjbkImLkElbs=_2064201500&query={{ query }}"
+               target="_blank" id="sogou_news" onclick="navBar(this,&#39;query=&#39;,true);">新闻</a></li>
         <li class="cur"><a>网页</a></li>
         <li><span class="nav-new"></span><a
-                href="http://weixin.sogou.com/weixin?p=01030402&query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD%20%E7%BE%8A%E9%A9%BC&type=2&ie=utf8"
-                id="sogou_weixin" onclick="navBar(this,&#39;query=&#39;,true)">微信</a></li>
+                href="http://weixin.sogou.com/weixin?p=01030402&query={{ query }}"&type=2&ie=utf8"
+                target="_blank" id="sogou_weixin" onclick="navBar(this,&#39;query=&#39;,true)">微信</a></li>
         <li>
-            <a href="http://wenwen.sogou.com/s/?cid=websearch2ww&w=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD%20%E7%BE%8A%E9%A9%BC"
-               id="sogou_wenwen" onclick="navBar(this,&#39;w=&#39;,true)">问问</a></li>
+            <a href="http://wenwen.sogou.com/s/?cid=websearch2ww&w={{ query }}""
+               target="_blank" id="sogou_wenwen" onclick="navBar(this,&#39;w=&#39;,true)">问问</a></li>
         <li>
-            <a href="http://pic.sogou.com/pics?ie=utf8&p=40230504&interV=kKIOkrELjbkNmLkElbYTkKIKmbELjboJmLkEkL8TkKIMkLELjb8TkKIKmrELjbkImLkElbs=_2064201500&query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC"
-               id="sogou_pic" onclick="navBar(this,&#39;query=&#39;,true)">图片</a></li>
+            <a href="http://pic.sogou.com/pics?ie=utf8&p=40230504&interV=kKIOkrELjbkNmLkElbYTkKIKmbELjboJmLkEkL8TkKIMkLELjb8TkKIKmrELjbkImLkElbs=_2064201500&query={{ query }}"
+               target="_blank" id="sogou_pic" onclick="navBar(this,&#39;query=&#39;,true)">图片</a></li>
         <li>
-            <a href="http://v.sogou.com/v?ie=utf8&p=40230608&interV=kKIOkrELjbkNmLkElbYTkKIKmbELjboJmLkEkL8TkKIMkLELjb8TkKIKmrELjbkImLkElbs=_2064201500&query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC"
-               onclick="navBar(this,&#39;query=&#39;,true)" id="sogou_video">视频</a></li>
+            <a href="http://v.sogou.com/v?ie=utf8&p=40230608&interV=kKIOkrELjbkNmLkElbYTkKIKmbELjboJmLkEkL8TkKIMkLELjb8TkKIKmrELjbkImLkElbs=_2064201500&query={{ query }}"
+               target="_blank" onclick="navBar(this,&#39;query=&#39;,true)" id="sogou_video">视频</a></li>
         <li>
-            <a href="http://mp3.sogou.com/music.so?ie=utf8&class=1&p=40010200&interV=kKIOkrELjbkNmLkElbYTkKIKmbELjboJmLkEkL8TkKIMkLELjb8TkKIKmrELjbkImLkElbs=_2064201500&query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC"
-               id="sogou_music" onclick="navBar(this,&#39;query=&#39;,true)">音乐</a></li>
-        <li><a href="http://map.sogou.com/#lq=开心乐园 羊驼" id="sogou_maps"
-               onclick="navBar(this,&#39;#lq=&#39;,false)">地图</a></li>
-        <li><a id="inttab_35_1" onclick="navBar(this,&#39;query=&#39;,true);"
-               href="http://www.sogou.com/web?query=%BF%AA%D0%C4%C0%D6%D4%B0+%D1%F2%CD%D5&interation=196643&chuidq=35&sourceid=inttab_web&interV=kKIOkrELjbkNmLkElbYTkKIKmbELjboJmLkEkL8TkKIMkLELjb8TkKIKmrELjbkImLkElbs%3D_2064201500">旅游</a>
+            <a href="http://mp3.sogou.com/music.so?ie=utf8&class=1&p=40010200&interV=kKIOkrELjbkNmLkElbYTkKIKmbELjboJmLkEkL8TkKIMkLELjb8TkKIKmrELjbkImLkElbs=_2064201500&query={{ query }}"
+               target="_blank" id="sogou_music" onclick="navBar(this,&#39;query=&#39;,true)">音乐</a></li>
+        <li><a href="http://map.sogou.com/#lq={{ query }}" id="sogou_maps"
+               target="_blank" onclick="navBar(this,&#39;#lq=&#39;,false)">地图</a></li>
+        <li><a id="inttab_35_1" onclick="navBar(this,&#39;query=&#39;,true);" target="_blank"
+               href="http://www.sogou.com/web?query={{ query }}&interation=196643&chuidq=35&sourceid=inttab_web&interV=kKIOkrELjbkNmLkElbYTkKIKmbELjboJmLkEkL8TkKIMkLELjb8TkKIKmrELjbkImLkElbs%3D_2064201500">旅游</a>
         </li>
         <li class="navMore"><a href="http://www.sogou.com/docs/more.htm?v=1" id="top_more" target="_blank">更多<span>&gt;&gt;</span></a>
 
@@ -3963,19 +3970,14 @@
         <div class="querybox">
             <div class="qborder">
                 <div class="qborder2"><input type="text" class="query" id="upquery" name="query"
-                                             onfocus="focusInput(this)" ov="开心乐园 羊驼" value="开心乐园 羊驼" autocomplete="off"><a
-                        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&ie=utf8&_ast=1415606656&_asf=null&w=01029901&p=40040100&dp=1&cid=&sut=7854&sst0=1415606634628&lkt=1%2C1415606631196%2C1415606631196#"
-                        class="qreset2" style="visibility: visible;"></a></div>
+                                             onfocus="focusInput(this)" ov="{{ query }}" value="{{ query }}" autocomplete="off">
+                </div>
             </div>
-            <input type="hidden" name="ie" value="utf8"><input type="hidden" name="_ast" value="1415606656"><input
-                type="hidden" name="_asf" value="null"><input type="hidden" name="w" value="01029901"><input
-                type="hidden" name="p" value="40040100"><input type="hidden" name="dp" value="1"><input type="hidden"
-                                                                                                        name="cid"
-                                                                                                        value=""><input
+            <input
                 type="submit" value="搜狗搜索" class="sbtn1" uigs="searchBtn" onmouseup="this.className=&#39;sbtn1&#39;"
                 onmousedown="this.className=&#39;btnactive&#39;" onmouseout="this.className=&#39;sbtn1&#39;"
                 onmouseover="this.className=&#39;btnactive&#39;" id="searchBtn">
-
+            <!--
             <div class="term">
                 <div class="popMore" style="display:none"><a id="left_timespan_0" class="cur"
                                                              href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&ie=utf8&_ast=1415606656&_asf=null&w=01029901&p=40040100&dp=1&cid=&sut=7854&sst0=1415606634628&lkt=1%2C1415606631196%2C1415606631196#">全部时间</a><a
@@ -3989,6 +3991,7 @@
                         href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&ie=utf8&sst0=1415606634628&p=40040100&cid=&sourceid=inttime_year&interV=kKIOkrELjbkNmLkElbYTkKIKmbELjboJmLkEkL8TkKIMkLELjb8TkKIKmrELjbkImLkElbs%3D_2064201500&tsn=4&interation=">一年内</a>
                 </div>
             </div>
+            -->
         </div>
     </form>
     <form id="fankuiform" method="post" accept-charset="gbk"><input type="hidden" name="cause" value="满意"><input
@@ -4005,9 +4008,7 @@
 <div id="main" class="main">
 
 
-<div>
-<div class="results">
-
+<div> <div class="results">
 
 <style>
     .catebox {
@@ -4070,48 +4071,42 @@
 
 
 
-
-<div class="p" id="pagebar_container"><span>1</span>
-    <a id="sogou_page_2"
-                                                        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=2&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">2</a>
+<!--
+<div class="p" id="pagebar_container">
+    <span>1</span>
+    <a
+        id="sogou_page_2"
+        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=2&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">2</a>
     <a
         id="sogou_page_3"
-        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=3&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">3</a><a
+        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=3&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">3</a>
+    <a
         id="sogou_page_4"
-        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=4&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">4</a><a
+        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=4&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">4</a>
+    <a
         id="sogou_page_5"
-        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=5&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">5</a><a
+        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=5&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">5</a>
+    <a
         id="sogou_page_6"
-        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=6&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">6</a><a
+        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=6&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">6</a>
+    <a
         id="sogou_page_7"
-        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=7&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">7</a><a
+        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=7&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">7</a>
+    <a
         id="sogou_page_8"
-        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=8&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">8</a><a
+        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=8&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">8</a>
+    <a
         id="sogou_page_9"
-        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=9&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">9</a><a
+        href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=9&ie=utf8&p=40040100&dp=1&w=01029901&dr=1">9</a>
+    <a
         id="sogou_next"
         href="http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&sut=7854&lkt=1%2C1415606631196%2C1415606631196&sst0=1415606634628&cid=&page=2&ie=utf8&p=40040100&dp=1&w=01029901&dr=1"
         class="np">下一页 &gt;</a>
 
-
-
-
-
-
-
 <img style="position:absolute;top:-1px" src="../../../../static/fav.ico" height="0" border="0" width="0">
-
-
-<form id="tupufankuiform" method="post" accept-charset="utf-8"><input type="hidden" name="cause" value=""><input
-        type="hidden" name="query" value="开心乐园 羊驼"><input type="hidden" name="refer"
-                                                          value="http://www.sogou.com/web?query=%E5%BE%AE%E4%BF%A1%E5%85%AC%E4%BC%97%E5%B9%B3%E5%8F%B0&amp;ie=utf8&amp;_ast=1415606656&amp;_asf=null&amp;w=01029901&amp;p=40040100&amp;dp=1&amp;cid=&amp;sut=9839&amp;sst0=1415606624373&amp;lkt=0%2C0%2C0"><input
-        type="hidden" name="uuid" value="be121967-ac67-4039-805c-e28f02d3e83c"><input type="hidden" name="scenehtml"
-                                                                                      value="" id="tupuscenehtml"><input
-        type="hidden" name="queryurl" value=""><input type="hidden" name="content" value=""></form>
-
-
 <img src="../../../../static/pv.gif" width="1" height="1" style="position:absolute;top:-1px">
-
+</div>
+-->
 
 <!--[if IE 6]><style type="text/css">.topbar, .res-logn-ico {display:none}</style><![endif]-->
 
@@ -4120,6 +4115,32 @@
 <!--real_pageno:1-->
 <!--zly-->
 
+<div class="p" id="pagebar_container">
+    {% for i in "123456789" %}
+        {% ifequal pageid i %}
+            <span>{{ pageid }}</span>
+        {% else %}
+            <a
+                id="sougou_page_{{ i }}"
+                class="pagination"
+                href="/search/{{ taskid }}/{{ query }}/{{ forloop.counter }}/">{{ forloop.counter }}</a>
+        {% endifequal %}
+    {% endfor %}
+    {% if next_pageid %}
+        <a
+            id="sogou_next"
+            href="/search/{{ taskid }}/{{ query }}/{{ next_pageid }}/"
+            class="pagination np">下一页 &gt;</a>
+    {% endif %}
 
+
+
+
+
+
+
+<img style="position:absolute;top:-1px" src="../../../../static/fav.ico" height="0" border="0" width="0">
+<img src="../../../../static/pv.gif" width="1" height="1" style="position:absolute;top:-1px">
+</div>
 </body>
 </html>
