modified tasks view

--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -16,6 +16,7 @@
     document.write('<p align="center"><font style="font-size:16px" color="red">当前标注人员账号为'+sid+'</font></p>')
 </script>
 
+<p align="center" style="font-size:16px" color="red">当前共有{{ tasknum }}个标注任务</p>
 
 
 {% for item in tasks %}
