--- a/templates/out.html
+++ b/templates/out.html
@@ -1,4 +1,3 @@
-{%  load add_annotation %}
 <!DOCTYPE html>
 <!-- saved from url=(0218)http://www.sogou.com/web?query=%E5%BC%80%E5%BF%83%E4%B9%90%E5%9B%AD+%E7%BE%8A%E9%A9%BC&ie=utf8&_ast=1415606656&_asf=null&w=01029901&p=40040100&dp=1&cid=&sut=7854&sst0=1415606634628&lkt=1%2C1415606631196%2C1415606631196 -->
 <html>
@@ -13,8 +12,7 @@
     <link rel="dns-prefetch" href="http://img01.sogoucdn.com/">
     <link rel="dns-prefetch" href="http://img02.sogoucdn.com/">
     <link rel="dns-prefetch" href="http://img03.sogoucdn.com/">
-    <link rel="dns-prefetch" href="http://img04.sogoucdn.com/">
-    <link rel="shortcut icon" href="http://www.sogou.c../../../../static/images/logo/new/favicon.ico?nv=1&v=2" type="image/x-icon">
+    <link rel="dns-prefetch" href="http://img04.sogoucdn.com/"> <link rel="shortcut icon" href="http://www.sogou.c../../../../static/images/logo/new/favicon.ico?nv=1&v=2" type="image/x-icon">
     <!-- global variables: current task id, current query -->
     <script type="text/javascript">
         currentTaskID = "{{ taskid }}";
