--- a/templates/out.html
+++ b/templates/out.html
@@ -13,6 +13,7 @@
     <link rel="dns-prefetch" href="http://img02.sogoucdn.com/">
     <link rel="dns-prefetch" href="http://img03.sogoucdn.com/">
     <link rel="dns-prefetch" href="http://img04.sogoucdn.com/"> <link rel="shortcut icon" href="http://www.sogou.c../../../../static/images/logo/new/favicon.ico?nv=1&v=2" type="image/x-icon">
+    <link href="/static/conf/button.css" type="text/css" rel="stylesheet">
     <!-- global variables: current task id, current query -->
     <script type="text/javascript">
         currentTaskID = "{{ taskid }}";
@@ -3990,8 +3991,12 @@
                 </div>
             </div>
             -->
+            <div>
+		        <button class="WCOverButton button blue close-reveal-modal"  type="Button" onclick="over_button_on_click();">浏览完成</button>
+	        </div>
         </div>
     </form>
+
     <form id="fankuiform" method="post" accept-charset="gbk"><input type="hidden" name="cause" value="满意"><input
             type="hidden" name="query" value="开心乐园 羊驼"><input type="hidden" name="refer"
                                                               value="http://www.sogou.com/web?query=%E5%BE%AE%E4%BF%A1%E5%85%AC%E4%BC%97%E5%B9%B3%E5%8F%B0&amp;ie=utf8&amp;_ast=1415606656&amp;_asf=null&amp;w=01029901&amp;p=40040100&amp;dp=1&amp;cid=&amp;sut=9839&amp;sst0=1415606624373&amp;lkt=0%2C0%2C0"><input
