Change some stylesheets.

--- a/templates/annolist.html
+++ b/templates/annolist.html
@@ -4,23 +4,10 @@
     <meta charset="UTF-8">
     <title></title>
     <style>
-        .annotation_header {
-            background: #EEEEEE;
-            margin: 10px;
-            padding: 40px;
-        }
-        .annotation_list {
-            margin: 10px;
-            padding: 40px;
-        }
-        .annotation_footer {
-            background: #EEEEEE;
-            margin: 10px;
-            padding: 40px;
-        }
 
     </style>
-        <link href="/static/conf/button.css" type="text/css" rel="stylesheet">
+    <link href="/static/conf/button.css" type="text/css" rel="stylesheet">
+    <link href="/static/conf/annotation.css" type="text/css" rel="stylesheet">
     <!-- global variables: current task id, current query -->
     <script type="text/javascript">
         currentTaskID = "{{ taskid }}";
