--- a/templates/annotation.html
+++ b/templates/annotation.html
@@ -16,6 +16,7 @@
     <link rel="dns-prefetch" href="http://img04.sogoucdn.com/">
     <link rel="shortcut icon" href="http://www.sogou.c../../../../static/images/logo/new/favicon.ico?nv=1&v=2" type="image/x-icon">
     <link href="/static/conf/button.css" type="text/css" rel="stylesheet">
+    <link href="/static/conf/annotation.css" type="text/css" rel="stylesheet">
     <!-- global variables: current task id, current query -->
     <script type="text/javascript">
         currentTaskID = "{{ taskid }}";
@@ -3917,18 +3918,6 @@
 
         .sitList li {
             padding-top: 0
-        }
-
-        .annotation_header {
-            background: #EEEEEE;
-            margin: 10px;
-            padding: 40px;
-        }
-
-        .annotation_footer {
-            background: #EEEEEE;
-            margin: 10px;
-            padding: 40px;
         }
 
     </style>
