modified some descriptions in template; delete one useless comment in searchresulthub.py

--- a/templates/annotation.html
+++ b/templates/annotation.html
@@ -3930,8 +3930,8 @@
 <h1>
     搜索结果标注
 </h1>
-<p>标注说明：blabla</p>
-<p>current query:{{ query }}</p>
+<p style="color: orangered; font-size:16pt">标注说明：请针对当前的 查询 和 搜索结果 ，标注您在看到该结果时的收获:<br>1星（完全没有收获），2星（收获很小），3星（比较有收获），4星（收获很大）</p>
+<p style="color: blue; font-size:18pt">当前查询:{{ query }}</p>
 </div>
 
 <div class="wrapper" id="wrapper">
