--- a/templates/questionnaire.html
+++ b/templates/questionnaire.html
@@ -29,8 +29,10 @@
 </div>
 </div>
 <div class="annotation_list">
-    <textarea name="answer" id="answer">
-    </textarea>
+    <div class="annotation_cell">
+        <textarea name="answer" id="answer">
+        </textarea>
+    </div>
 </div>
 <div class="annotation_footer">
     <button class="WCOverButton button blue close-reveal-modal"  type="Button" onclick="questionnaire_button_on_click();">提交答案</button>
