--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -3,6 +3,14 @@
 <head lang="en">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <link href="/static/conf/annotation.css" type="text/css" rel="stylesheet">
+    <script type="text/javascript" src="/static/conf/jquery-1.9.1.min.js"></script>
+	<script type="text/javascript" src="/static/conf/jquery-min.js"></script>
+	<script type="text/javascript" src="/static/conf/wc_preprocess.js"></script>
+	<script type="text/javascript" src="/static/conf/jquery.bgpos.js"></script>
+	<script type="text/javascript" src="/static/conf/jquery.reveal.js"></script>
+	<script type="text/javascript" src="/static/conf/jquery.raty.js"></script>
+	<script type="text/javascript" src="/static/conf/jquery.raty.min.js"></script>
+    <script type="text/javascript" src="/static/conf/anno_log.js"></script>
     <title>All tasks</title>
 </head>
 <body>
@@ -22,14 +30,17 @@
 </div>
 <div class="annotation_list">
 {% for item in tasks %}
+<div class="annotation_cell">
+<img class="check" src="/static/conf/img/check.jpg">
 <div>
 <h2> 第 {{ item.task_id }} 个标注任务</h2>
     <p>任务描述：{{ item.content }}</p>
     <p>初始查询： {{ item.init_query }}</p>
-    <a href ='/search/{{ item.task_id }}/{{ item.init_query }}/1' target="_blank">点击这里开始</a>
+    <a class="annotation_link" href ='/search/{{ item.task_id }}/{{ item.init_query }}/1' target="_blank">点击这里开始</a>
 </div>
-
+</div>
 {% endfor %}
 </div>
+
 </body>
 </html>
