--- a/static/conf/annotation.css
+++ b/static/conf/annotation.css
@@ -5,12 +5,21 @@
 }
 .annotation_list {
     margin: 10px;
-    padding: 40px;
 }
 .annotation_footer {
     background: #EEEEEE;
     margin: 10px;
     padding: 40px;
+}
+.annotation_cell {
+    padding-left: 40px;
+}
+.annotation_cell .check {
+    visibility: hidden;
+    width: 24px;
+    height: 24px;
+    margin-left: -40px;
+    float: left;
 }
 .annotation_list textarea {
     height: 150px;
